--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ body {
   color: var(--text-color-secondary);
 }
 
-/* ----------------main-------------------- */
+/* ---------main--------- */
 
 .hero {
   background-color: var(--footer-bg-color);
@@ -99,7 +99,7 @@ body {
   background-color: #188ce8;
 }
 
-/* section about */
+/* --- section about  ---- */
 
 .about {
   list-style-type: none;
@@ -158,6 +158,7 @@ body {
 .basement {
   background-color: var(--footer-bg-color);
 }
+
 .logo-bsmt {
   text-decoration: none;
   color: var(--text-color-accent);
@@ -168,9 +169,11 @@ body {
   line-height: 1.19;
   letter-spacing: 0.03em;
 }
+
 .logo-bsmt-part {
   color: var(--footer-color-text-secondary);
 }
+
 .bsmt-list {
   list-style: none;
 
@@ -180,15 +183,17 @@ body {
   line-height: 1.71;
   letter-spacing: 0.03em;
 }
+
 .adds {
   color: var(--footer-color-text-secondary);
 }
+
 .bsmt-item {
   text-decoration: none;
   color: var(--footer-color-text-primary);
 }
 
-/* -------------------portfolio------------------------ */
+/* -------------------portfolio page------------------------ */
 
 .btn-item {
   list-style: none;
