--- a/css/styles.css
+++ b/css/styles.css
@@ -105,13 +105,14 @@ body {
 }
 .about-title {
   line-height: 1.14;
+  font-size: 14px;
+  font-weight: 700;
 
   text-transform: uppercase;
 }
 
 .about-text {
   line-height: 1.71;
-
   color: var(--text-color-secondary);
 }
 /* section about work */
@@ -174,6 +175,7 @@ body {
 
 .adds {
   color: var(--footer-color-text-secondary);
+  text-decoration: none;
 }
 
 .bsmt-item {
